// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wordmark renders at size=lg 1`] = `
<View
  style={
    {
      "alignItems": "center",
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Fraunces_700Bold",
          "lineHeight": 38,
        },
        {
          "color": "#101418",
          "fontSize": 38,
          "letterSpacing": 2.28,
        },
      ]
    }
  >
    CULINAIRE
  </Text>
  <Text
    style={
      [
        {
          "color": "#B87840",
          "fontFamily": "Caveat_600SemiBold",
          "lineHeight": 30,
        },
        {
          "fontSize": 30,
          "marginTop": 2,
        },
      ]
    }
  >
    Kitchen
  </Text>
  <View
    style={
      {
        "marginTop": 8,
      }
    }
  >
    <View
      style={
        [
          {
            "borderColor": "#B87840",
            "borderWidth": 0.5,
          },
          {
            "borderRadius": 4,
            "paddingHorizontal": 8,
            "paddingVertical": 2,
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#B87840",
              "fontFamily": "Inter_600SemiBold",
            },
            {
              "fontSize": 10,
              "letterSpacing": 1.7999999999999998,
            },
          ]
        }
      >
        LITE
      </Text>
    </View>
  </View>
</View>
`;

exports[`Wordmark renders at size=md 1`] = `
<View
  style={
    {
      "alignItems": "center",
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Fraunces_700Bold",
          "lineHeight": 38,
        },
        {
          "color": "#101418",
          "fontSize": 28.5,
          "letterSpacing": 1.71,
        },
      ]
    }
  >
    CULINAIRE
  </Text>
  <Text
    style={
      [
        {
          "color": "#B87840",
          "fontFamily": "Caveat_600SemiBold",
          "lineHeight": 30,
        },
        {
          "fontSize": 22.5,
          "marginTop": 1.5,
        },
      ]
    }
  >
    Kitchen
  </Text>
  <View
    style={
      {
        "marginTop": 6,
      }
    }
  >
    <View
      style={
        [
          {
            "borderColor": "#B87840",
            "borderWidth": 0.5,
          },
          {
            "borderRadius": 3,
            "paddingHorizontal": 6,
            "paddingVertical": 1.5,
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#B87840",
              "fontFamily": "Inter_600SemiBold",
            },
            {
              "fontSize": 7.5,
              "letterSpacing": 1.3499999999999999,
            },
          ]
        }
      >
        LITE
      </Text>
    </View>
  </View>
</View>
`;

exports[`Wordmark renders at size=sm 1`] = `
<View
  style={
    {
      "alignItems": "center",
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Fraunces_700Bold",
          "lineHeight": 38,
        },
        {
          "color": "#101418",
          "fontSize": 20.900000000000002,
          "letterSpacing": 1.254,
        },
      ]
    }
  >
    CULINAIRE
  </Text>
  <Text
    style={
      [
        {
          "color": "#B87840",
          "fontFamily": "Caveat_600SemiBold",
          "lineHeight": 30,
        },
        {
          "fontSize": 16.5,
          "marginTop": 1.1,
        },
      ]
    }
  >
    Kitchen
  </Text>
  <View
    style={
      {
        "marginTop": 4.4,
      }
    }
  >
    <View
      style={
        [
          {
            "borderColor": "#B87840",
            "borderWidth": 0.5,
          },
          {
            "borderRadius": 2.2,
            "paddingHorizontal": 4.4,
            "paddingVertical": 1.1,
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#B87840",
              "fontFamily": "Inter_600SemiBold",
            },
            {
              "fontSize": 5.5,
              "letterSpacing": 0.99,
            },
          ]
        }
      >
        LITE
      </Text>
    </View>
  </View>
</View>
`;
